--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /src/TiposPrimitivos/nbproject/private/
 /src/TiposPrimitivos/build/
+/src/TesteTipos/nbproject/private/
+/src/TesteTipos/build/
+/src/SomaSwing/nbproject/private/
+/src/SomaSwing/build/
