--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /src/TesteTipos/build/
 /src/SomaSwing/nbproject/private/
 /src/SomaSwing/build/
+/src/calculadoraIdade/nbproject/private/
+/src/calculadoraIdade/build/
