--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /src/SomaSwing/build/
 /src/calculadoraIdade/nbproject/private/
 /src/calculadoraIdade/build/
+/src/OperadoresAritmeticos/nbproject/private/
+/src/OperadoresAritmeticos/build/
+/src/OperadoresSwing/nbproject/private/
+/src/OperadoresSwing/build/
